samples/_failures_safe/1761726276_d6d39d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cab85344.c: In function ‘main’:
./samples/SAFE/__tmp_cab85344.c:157:17: error: expected declaration or statement at end of input
  157 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_cab85344.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cab85344.c:157:17: error: expected declaration or statement at end of input
